Rename to Signal Analysis

--- a/features/agent.mdx
+++ b/features/agent.mdx
@@ -217,7 +217,7 @@ The Agent is powerful but has limitations:
 ## Related
 
 <CardGroup cols={2}>
-  <Card title="AI-Powered Analysis" icon="brain" href="/features/ai-analysis">
+  <Card title="Signal Analysis" icon="brain" href="/features/ai-analysis">
     The AI capabilities that power the Agent.
   </Card>
   <Card title="MCP Integration" icon="plug" href="/integrations/mcp">
