--- a/features/ai-analysis.mdx
+++ b/features/ai-analysis.mdx
@@ -1,5 +1,5 @@
 ---
-title: "AI-Powered Analysis"
+title: "Signal Analysis"
 description: "How Modem uses AI to understand and organize your user feedback"
 ---
 
