--- a/features/technical-crm.mdx
+++ b/features/technical-crm.mdx
@@ -266,7 +266,7 @@ When someone changes companies:
   <Card title="Participants" icon="users" href="/guides/participants">
     How participants connect to conversations and topics.
   </Card>
-  <Card title="AI-Powered Analysis" icon="brain" href="/features/ai-analysis">
+  <Card title="Signal Analysis" icon="brain" href="/features/ai-analysis">
     How AI powers enrichment and analysis.
   </Card>
 </CardGroup>
