--- a/index.mdx
+++ b/index.mdx
@@ -28,7 +28,7 @@ By connecting your communication channels (Discord, Slack, GitHub, Linear, and e
   <Card title="Multi-Source Ingestion" icon="plug" href="/integrations/overview">
     Connect Discord, Slack, GitHub, Linear, and email. All your user conversations in one place.
   </Card>
-  <Card title="AI-Powered Analysis" icon="brain" href="/features/ai-analysis">
+  <Card title="Signal Analysis" icon="brain" href="/features/ai-analysis">
     Automatic topic discovery, conversation segmentation, and feedback categorization.
   </Card>
   <Card title="Technical CRM" icon="address-book" href="/features/technical-crm">
