--- a/integrations/mcp.mdx
+++ b/integrations/mcp.mdx
@@ -207,7 +207,7 @@ The MCP token inherits your user permissions:
   <Card title="The Modem Agent" icon="robot" href="/features/agent">
     Use the Agent directly in the Modem dashboard.
   </Card>
-  <Card title="AI-Powered Analysis" icon="brain" href="/features/ai-analysis">
+  <Card title="Signal Analysis" icon="brain" href="/features/ai-analysis">
     The same AI capabilities power MCP queries.
   </Card>
 </CardGroup>
