--- a/features/ai-analysis.mdx
+++ b/features/ai-analysis.mdx
@@ -5,7 +5,7 @@ description: "How Modem uses AI to understand and organize your user feedback"
 
 Modem uses AI throughout the platform to transform raw messages into structured, actionable insights. Here's how it works.
 
-## Core AI Capabilities
+## Capabilities
 
 ### Topic Discovery
 
