Clean up MCP description

--- a/developers/mcp.mdx
+++ b/developers/mcp.mdx
@@ -3,19 +3,12 @@ title: "MCP (Model Context Protocol)"
 description: "Access Modem from your AI tools via MCP"
 ---
 
-Modem provides an MCP server that lets you access your feedback data from AI-powered development tools like Claude Desktop, Cursor, and other MCP-compatible clients.
+Modem provides an MCP server that gives your AI tools direct access to your feedback data. Query user feedback, search topics, and look up customer context without leaving your editor.
 
-## What is MCP?
-
-The Model Context Protocol (MCP) is an open standard that allows AI assistants to connect to external data sources and tools. By connecting your AI tools to Modem's MCP server, you can:
-
-- Query your feedback data from within your IDE
-- Ask questions about users and topics without leaving your workflow
-- Search across all your connected sources using natural language
-
-<Info>
-  MCP lets you bring Modem's capabilities into the tools you already use, rather than switching to the Modem dashboard.
-</Info>
+**Why use it:**
+- Surface relevant bug reports while you're fixing code
+- Check what users are saying about a feature before you change it
+- Pull customer context into conversations with Claude or Cursor
 
 ## Supported Clients
 
