--- a/features/agent.mdx
+++ b/features/agent.mdx
@@ -220,7 +220,7 @@ The Agent is powerful but has limitations:
   <Card title="Signal Analysis" icon="brain" href="/features/ai-analysis">
     The AI capabilities that power the Agent.
   </Card>
-  <Card title="MCP Integration" icon="plug" href="/integrations/mcp">
+  <Card title="MCP" icon="plug" href="/developers/mcp">
     Access Modem from your AI tools.
   </Card>
   <Card title="Scheduled Tasks" icon="clock" href="/features/scheduled-tasks">
