--- a/index.mdx
+++ b/index.mdx
@@ -22,7 +22,7 @@ By connecting your communication channels (Discord, Slack, GitHub, Linear, and e
   </Card>
 </CardGroup>
 
-## Key Capabilities
+## Features
 
 <CardGroup cols={2}>
   <Card title="Multi-Source Ingestion" icon="plug" href="/integrations/overview">
