Clarify compliance status, hide MCP docs

--- a/features/security-privacy.mdx
+++ b/features/security-privacy.mdx
@@ -3,7 +3,7 @@ title: "Security & Privacy"
 description: "How Modem protects your data"
 ---
 
-Modem is built with security at its core. We maintain SOC 2 Type II compliance and follow industry best practices to protect your data.
+Modem is built with security at its core. We are pursuing SOC 2 Type II certification and follow industry best practices to protect your data.
 
 <Info>
   Full policy documents are available in our [Trust Center](https://trust.modem.dev). This page provides a summary of key security and privacy practices.
@@ -13,8 +13,7 @@ Modem is built with security at its core. We maintain SOC 2 Type II compliance a
 
 | Standard | Status |
 |----------|--------|
-| SOC 2 Type II | Compliant |
-| GDPR | Compliant |
+| SOC 2 Type II | In Progress |
 
 ## Frequently Asked Questions
 
@@ -60,20 +59,6 @@ Modem is built with security at its core. We maintain SOC 2 Type II compliance a
 
 **Post-incident review.** After any incident, we conduct a thorough review to understand root causes and implement measures to prevent recurrence.
 
-### What are my privacy rights?
-
-**GDPR rights.** If you're in the EU/EEA, you have the right to:
-- Access your personal data
-- Correct inaccurate data
-- Request deletion of your data
-- Restrict processing
-- Data portability
-- Object to processing
-
-**Exercising rights.** To exercise any privacy rights, email [support@modem.dev](mailto:support@modem.dev). We respond to requests within 30 days.
-
-**Data Processing Agreement.** Enterprise customers can request a DPA that documents our data processing commitments.
-
 ### How do you manage third-party services?
 
 **Vendor assessment.** All service providers that access customer data must pass our security assessment before engagement. We evaluate their security practices, compliance certifications, and data handling procedures.
@@ -91,9 +76,9 @@ Modem is built with security at its core. We maintain SOC 2 Type II compliance a
 
 ### What security certifications does Modem have?
 
-**SOC 2 Type II.** We have completed a SOC 2 Type II audit, which evaluates our security controls over an extended period. This report is available to customers under NDA.
+**SOC 2 Type II.** We are currently pursuing SOC 2 Type II certification, which evaluates security controls over an extended period. Contact us for details on our progress and timeline.
 
-**Ongoing compliance.** We maintain continuous compliance through regular internal audits, automated security monitoring, and annual third-party assessments.
+**Ongoing compliance.** We maintain strong security practices through regular internal audits and automated security monitoring.
 
 ### How can I report a security issue?
 
