--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -90,7 +90,7 @@ Once data starts flowing, explore the key sections of your dashboard:
   <Card title="Use the Agent" icon="robot" href="/features/agent">
     Learn how to query your data with natural language.
   </Card>
-  <Card title="Set Up Automation" icon="clock" href="/features/scheduled-tasks">
+  <Card title="Set Up Automation" icon="clock" href="/features/tasks">
     Configure scheduled digests and automated workflows.
   </Card>
 </CardGroup>
