--- a/use-cases.mdx
+++ b/use-cases.mdx
@@ -146,7 +146,7 @@ These use cases combine Modem's core capabilities:
   <Card title="Use the Agent" icon="robot" href="/features/agent">
     Query your data with natural language.
   </Card>
-  <Card title="Set Up Automation" icon="clock" href="/features/scheduled-tasks">
+  <Card title="Set Up Automation" icon="clock" href="/features/tasks">
     Schedule recurring tasks and notifications.
   </Card>
   <Card title="Connect Linear" icon="square-check" href="/integrations/linear">
